--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /simple_problem_solving_agent_gadhagasker/build/
 /simple_problem_solving_agent_gadhagasker/dist/
+/cse221Assignment3 (1)/build/
+/cse221Assignment3 (1)/nbproject/private/
