--- a/LAB01_DFS/build.xml
+++ b/LAB01_DFS/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="CSE422_LAB01_DFS" default="default" basedir=".">
-    <description>Builds, tests, and runs the project CSE422_LAB01_DFS.</description>
+<project name="Lab1_dfs" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Lab1_dfs.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="CSE422_LAB01_DFS-impl.jar">
+        <target name="run" depends="Lab1_dfs-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
