--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /simple_problem_solving_agent_gadhagasker/dist/
 /cse221Assignment3 (1)/build/
 /cse221Assignment3 (1)/nbproject/private/
+/LAB01_DFS/build/
