--- a/alphabetapru/nbproject/project.properties
+++ b/alphabetapru/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=alphabetapru.Alphabetapru
+main.class=alphabetapru.Alpha
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
